kube-cluster/rest/rest-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  #
  # This is the name that will appear in kubectl get po
  #
  name: lab7-rest
  labels:
    app: rest
spec:
  #
  # The specification is a list of attributes, one of which
  # is the list of containers
  # 
  restartPolicy: Never
  containers:
  - name: python-rest
    image: aliaoco/lab7-rest:latest
    resources:
      requests:
        cpu: 100m
        memory: 100Mi
    ports:
      - containerPort: 5000
    command:
      - python3
    args:
      - rest-server.py
    imagePullPolicy: IfNotPresent
